--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -21,6 +21,10 @@
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
           <span>Home</span>
         </a>
+        <a href="/studio" class="nav-item">
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
+          <span>Studio</span>
+        </a>
         <a href="/profile" class="nav-item">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 10-16 0"/></svg>
           <span>Profile</span>
@@ -131,14 +135,10 @@
             TuGames
           </h2>
         </div>
-
-        <!-- Loading state -->
         <div id="games-loading" class="games-loading">
           <div class="games-loading-spinner"></div>
           <span>Loading TuGames...</span>
         </div>
-
-        <!-- Empty state -->
         <div id="games-empty" class="games-empty" style="display:none">
           <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#333" stroke-width="2">
             <rect x="2" y="6" width="20" height="12" rx="2"/>
@@ -147,8 +147,6 @@
           <h3>No TuGames yet</h3>
           <p>Games will appear here once they're added</p>
         </div>
-
-        <!-- Games grid (filled dynamically) -->
         <div id="games-grid" class="games-grid" style="display:none"></div>
       </section>
     </main>
