--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -21,6 +21,10 @@
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
           <span>Home</span>
         </a>
+        <a href="/studio" class="nav-item">
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
+          <span>Studio</span>
+        </a>
         <a href="/profile" class="nav-item active">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 10-16 0"/></svg>
           <span>Profile</span>
@@ -28,10 +32,6 @@
         <a href="/avatar" class="nav-item">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2a4 4 0 014 4v2a4 4 0 11-8 0V6a4 4 0 014-4z"/><rect x="6" y="12" width="12" height="10" rx="2"/></svg>
           <span>Avatar</span>
-        </a>
-        <a href="/studio" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
-          <span>Studio</span>
         </a>
       </nav>
       <div class="sidebar-currency">
@@ -57,72 +57,129 @@
     </aside>
 
     <main id="main">
-      <div class="profile-header">
-        <div class="profile-avatar-section">
-          <div class="avatar-display">
-            <canvas id="profile-avatar-canvas" width="180" height="240"></canvas>
-          </div>
-        </div>
-        <div class="profile-info-section">
-          <h1 id="profile-username">...</h1>
-          <div class="profile-currencies">
-            <div class="profile-currency">
-              <img src="/img/urus.png" alt="Urus" class="profile-currency-icon">
-              <span class="profile-currency-amount" id="profile-urus">0</span>
-              <span class="profile-currency-label">Urus</span>
-            </div>
-            <div class="profile-currency">
-              <img src="/img/daily.png" alt="Strikes" class="profile-currency-icon">
-              <span class="profile-currency-amount" id="profile-strikes">0</span>
-              <span class="profile-currency-label">Day Streak</span>
-            </div>
-          </div>
-          <div class="profile-meta">
-            <span class="meta-item" id="profile-joined">Joined: --</span>
-            <span class="meta-item" id="profile-games">Games: 0</span>
-          </div>
-          <div class="profile-bio">
-            <p id="profile-bio-text">No bio set</p>
-            <button class="btn btn-sm btn-outline" id="btn-edit-bio">Edit Bio</button>
-          </div>
-          <div id="bio-editor" style="display:none">
-            <textarea id="bio-input" maxlength="200" placeholder="About yourself..."></textarea>
-            <div class="bio-buttons">
-              <button class="btn btn-sm btn-white" id="btn-save-bio">Save</button>
-              <button class="btn btn-sm btn-outline" id="btn-cancel-bio">Cancel</button>
-            </div>
-          </div>
-        </div>
+      <!-- LOADING -->
+      <div id="page-loading" class="page-loading">
+        <div class="loading-spinner"></div>
+        <span>Loading profile...</span>
       </div>
 
-      <div class="section">
-        <h2>
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" style="vertical-align:middle;margin-right:6px"><path d="M18 20V10M12 20V4M6 20v-6"/></svg>
-          Stats
-        </h2>
-        <div class="stats-grid">
-          <div class="stat-card">
-            <div class="stat-icon-row">
-              <img src="/img/urus.png" alt="Urus" class="stat-icon-img">
+      <!-- ERROR -->
+      <div id="page-error" class="page-error" style="display:none">
+        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#ef4444" stroke-width="2">
+          <circle cx="12" cy="12" r="10"/>
+          <line x1="15" y1="9" x2="9" y2="15"/>
+          <line x1="9" y1="9" x2="15" y2="15"/>
+        </svg>
+        <h2>User Not Found</h2>
+        <p id="error-message">This user doesn't exist.</p>
+        <a href="/home" class="btn btn-back">Back to Home</a>
+      </div>
+
+      <!-- PROFILE CONTENT -->
+      <div id="profile-content" style="display:none">
+        <!-- OWN PROFILE INDICATOR -->
+        <div id="viewing-badge" class="viewing-badge" style="display:none">
+          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="8" r="5"/>
+            <path d="M20 21a8 8 0 10-16 0"/>
+          </svg>
+          <span id="viewing-badge-text">Viewing profile</span>
+        </div>
+
+        <!-- PROFILE HEADER -->
+        <div class="profile-header">
+          <div class="profile-avatar-section">
+            <div class="avatar-display">
+              <canvas id="profile-avatar-canvas" width="180" height="240"></canvas>
             </div>
-            <span class="stat-value" id="stat-urus">0</span>
-            <span class="stat-label">Urus</span>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon-row">
-              <img src="/img/daily.png" alt="Strikes" class="stat-icon-img">
+            <!-- ONLINE STATUS -->
+            <div class="profile-status" id="profile-status">
+              <span class="status-dot status-offline"></span>
+              <span class="status-text" id="profile-status-text">Offline</span>
             </div>
-            <span class="stat-value" id="stat-strikes">0</span>
-            <span class="stat-label">Day Streak</span>
           </div>
-          <div class="stat-card">
-            <span class="stat-value" id="stat-games">0</span>
-            <span class="stat-label">Games Played</span>
+          <div class="profile-info-section">
+            <div class="profile-name-row">
+              <h1 id="profile-username">...</h1>
+              <span class="own-badge" id="own-badge" style="display:none">You</span>
+            </div>
+            <div class="profile-currencies">
+              <div class="profile-currency">
+                <img src="/img/urus.png" alt="Urus" class="profile-currency-icon">
+                <span class="profile-currency-amount" id="profile-urus">0</span>
+                <span class="profile-currency-label">Urus</span>
+              </div>
+              <div class="profile-currency">
+                <img src="/img/daily.png" alt="Strikes" class="profile-currency-icon">
+                <span class="profile-currency-amount" id="profile-strikes">0</span>
+                <span class="profile-currency-label">Day Streak</span>
+              </div>
+            </div>
+            <div class="profile-meta">
+              <span class="meta-item" id="profile-joined">Joined: --</span>
+              <span class="meta-item" id="profile-games">Games: 0</span>
+              <span class="meta-item meta-playing" id="profile-playing" style="display:none">
+                <span class="playing-dot"></span>
+                Playing: <a href="#" id="profile-playing-link">--</a>
+              </span>
+            </div>
+            <div class="profile-bio">
+              <p id="profile-bio-text">No bio set</p>
+              <button class="btn btn-sm btn-outline" id="btn-edit-bio" style="display:none">Edit Bio</button>
+            </div>
+            <div id="bio-editor" style="display:none">
+              <textarea id="bio-input" maxlength="200" placeholder="About yourself..."></textarea>
+              <div class="bio-buttons">
+                <button class="btn btn-sm btn-white" id="btn-save-bio">Save</button>
+                <button class="btn btn-sm btn-outline" id="btn-cancel-bio">Cancel</button>
+              </div>
+            </div>
           </div>
-          <div class="stat-card">
-            <span class="stat-value" id="stat-joined">--</span>
-            <span class="stat-label">Member Since</span>
+        </div>
+
+        <!-- STATS -->
+        <div class="section">
+          <h2>
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" style="vertical-align:middle;margin-right:6px"><path d="M18 20V10M12 20V4M6 20v-6"/></svg>
+            Stats
+          </h2>
+          <div class="stats-grid">
+            <div class="stat-card">
+              <div class="stat-icon-row">
+                <img src="/img/urus.png" alt="Urus" class="stat-icon-img">
+              </div>
+              <span class="stat-value" id="stat-urus">0</span>
+              <span class="stat-label">Urus</span>
+            </div>
+            <div class="stat-card">
+              <div class="stat-icon-row">
+                <img src="/img/daily.png" alt="Strikes" class="stat-icon-img">
+              </div>
+              <span class="stat-value" id="stat-strikes">0</span>
+              <span class="stat-label">Day Streak</span>
+            </div>
+            <div class="stat-card">
+              <span class="stat-value" id="stat-games">0</span>
+              <span class="stat-label">Games Played</span>
+            </div>
+            <div class="stat-card">
+              <span class="stat-value" id="stat-joined">--</span>
+              <span class="stat-label">Member Since</span>
+            </div>
           </div>
+        </div>
+
+        <!-- PUBLISHED GAMES -->
+        <div class="section" id="published-section" style="display:none">
+          <h2>
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" style="vertical-align:middle;margin-right:6px">
+              <rect x="2" y="6" width="20" height="12" rx="2"/>
+              <path d="M6 12h4M8 10v4M14 10h2M14 14h2"/>
+            </svg>
+            Published Games
+            <span class="game-count-badge" id="published-count">0</span>
+          </h2>
+          <div class="published-games-grid" id="published-games-grid"></div>
         </div>
       </div>
     </main>
