--- a/public/pages/market.html
+++ b/public/pages/market.html
@@ -218,7 +218,7 @@
 
           <!-- hCaptcha -->
           <div class="captcha-container" id="captcha-container" style="display:none">
-            <div id="hcaptcha-widget" class="h-captcha" data-sitekey="" data-theme="dark"></div>
+            <div id="hcaptcha-widget"></div>
           </div>
 
           <div id="item-buy-status" class="item-buy-status"></div>
