--- a/public/pages/studio-editor.html
+++ b/public/pages/studio-editor.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Tublox Studio Editor</title>
   <link rel="stylesheet" href="/css/studio-editor.css">
+  <link rel="stylesheet" href="/css/shared.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
