--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tublox - Home</title>
   <link rel="stylesheet" href="/css/home.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="app">
@@ -18,32 +18,49 @@
       </div>
       <nav class="sidebar-nav">
         <a href="/home" class="nav-item active">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 10L12 3l8 7v9a2 2 0 01-2 2h-4v-5a1 1 0 00-1-1h-2a1 1 0 00-1 1v5H6a2 2 0 01-2-2z"/>
+          </svg>
           <span>Home</span>
         </a>
         <a href="/studio" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="3" width="7" height="7" rx="1"/>
+            <rect x="14" y="3" width="7" height="7" rx="1"/>
+            <rect x="3" y="14" width="7" height="7" rx="1"/>
+            <path d="M17.5 14v7M14 17.5h7"/>
+          </svg>
           <span>Studio</span>
         </a>
         <a href="/profile" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 10-16 0"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="8" r="4"/>
+            <path d="M5 21a7 7 0 0114 0"/>
+          </svg>
           <span>Profile</span>
         </a>
         <a href="/avatar" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2a4 4 0 014 4v2a4 4 0 11-8 0V6a4 4 0 014-4z"/><rect x="6" y="12" width="12" height="10" rx="2"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M9 3h6l2 3h3a1 1 0 011 1v11a2 2 0 01-2 2H5a2 2 0 01-2-2V7a1 1 0 011-1h3l2-3z"/>
+            <circle cx="12" cy="13" r="4"/>
+          </svg>
           <span>Avatar</span>
         </a>
         <a href="/market" class="nav-item">
-  <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 01-8 0"/></svg>
-  <span>Market</span>
-</a>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 7l1-3h14l1 3"/>
+            <path d="M4 7v13a1 1 0 001 1h14a1 1 0 001-1V7"/>
+            <path d="M9 7v3a3 3 0 006 0V7"/>
+          </svg>
+          <span>Market</span>
+        </a>
       </nav>
       <div class="sidebar-currency">
         <div class="currency-item">
           <img src="/img/urus.png" alt="Urus" class="currency-icon">
           <span class="currency-amount" id="sidebar-urus">0</span>
         </div>
-        <div class="currency-item currency-strikes">
+        <div class="currency-item">
           <img src="/img/daily.png" alt="Strikes" class="currency-icon">
           <span class="currency-amount" id="sidebar-strikes">0</span>
         </div>
@@ -61,7 +78,7 @@
     </aside>
 
     <main id="main">
-      <!-- DAILY REWARD POPUP -->
+      <!-- DAILY REWARD -->
       <div id="daily-reward" class="daily-reward" style="display:none">
         <div class="daily-reward-overlay"></div>
         <div class="daily-reward-panel">
@@ -77,10 +94,10 @@
           </div>
           <div class="strike-progress">
             <div class="strike-milestones">
-              <div class="milestone" data-day="1"><div class="milestone-dot" id="ms-1"></div><span>1</span></div>
-              <div class="milestone" data-day="5"><div class="milestone-dot" id="ms-5"></div><span>5</span></div>
-              <div class="milestone" data-day="10"><div class="milestone-dot" id="ms-10"></div><span>10</span></div>
-              <div class="milestone" data-day="15"><div class="milestone-dot" id="ms-15"></div><span>15</span></div>
+              <div class="milestone"><div class="milestone-dot" id="ms-1"></div><span>1</span></div>
+              <div class="milestone"><div class="milestone-dot" id="ms-5"></div><span>5</span></div>
+              <div class="milestone"><div class="milestone-dot" id="ms-10"></div><span>10</span></div>
+              <div class="milestone"><div class="milestone-dot" id="ms-15"></div><span>15</span></div>
             </div>
             <div class="strike-bar"><div class="strike-bar-fill" id="strike-bar-fill"></div></div>
             <div class="strike-rewards-row">
@@ -110,7 +127,7 @@
       <!-- WELCOME -->
       <div class="welcome-banner">
         <div class="welcome-left">
-          <h1>Welcome, <span id="welcome-name">Player</span>!</h1>
+          <h1>Welcome, <span id="welcome-name">Player</span></h1>
           <p>Choose a TuGame to play</p>
           <div class="welcome-stats">
             <div class="welcome-stat">
@@ -129,28 +146,55 @@
         </div>
       </div>
 
-      <!-- TUGAMES — DYNAMIC -->
+      <!-- TUGAMES -->
       <section class="section">
         <div class="section-header">
-          <h2>
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" style="vertical-align:middle;margin-right:8px">
-              <rect x="2" y="6" width="20" height="12" rx="2"/><path d="M6 12h4M8 10v4M14 10h2M14 14h2"/>
+          <div class="section-title">
+            <div class="section-title-icon">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="2" y="6" width="20" height="12" rx="2"/>
+                <path d="M6 12h3M7.5 10.5v3"/>
+                <circle cx="16" cy="11" r="1"/>
+                <circle cx="18" cy="13" r="1"/>
+              </svg>
+            </div>
+            <h2>TuGames</h2>
+          </div>
+          <div class="search-bar">
+            <svg class="search-bar-icon" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="11" cy="11" r="7"/>
+              <path d="M21 21l-4.35-4.35"/>
             </svg>
-            TuGames
-          </h2>
+            <input type="text" id="search-input" placeholder="Search games..." autocomplete="off">
+          </div>
         </div>
+
         <div id="games-loading" class="games-loading">
           <div class="games-loading-spinner"></div>
           <span>Loading TuGames...</span>
         </div>
+
         <div id="games-empty" class="games-empty" style="display:none">
-          <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#333" stroke-width="2">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="1.5">
             <rect x="2" y="6" width="20" height="12" rx="2"/>
-            <path d="M6 12h4M8 10v4M14 10h2M14 14h2"/>
+            <path d="M6 12h3M7.5 10.5v3"/>
+            <circle cx="16" cy="11" r="1"/>
+            <circle cx="18" cy="13" r="1"/>
           </svg>
           <h3>No TuGames yet</h3>
           <p>Games will appear here once they're added</p>
         </div>
+
+        <div id="search-no-results" class="search-no-results">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="1.5">
+            <circle cx="11" cy="11" r="7"/>
+            <path d="M21 21l-4.35-4.35"/>
+            <path d="M8 11h6"/>
+          </svg>
+          <h3>No games found</h3>
+          <p>Try a different search term</p>
+        </div>
+
         <div id="games-grid" class="games-grid" style="display:none"></div>
       </section>
     </main>
