--- a/public/pages/market.html
+++ b/public/pages/market.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tublox - Market</title>
   <link rel="stylesheet" href="/css/market.css">
+  <link rel="stylesheet" href="/css/shared.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
 <body>
-  <div id="app">
+    <div id="app">
     <aside id="sidebar">
       <div class="sidebar-top">
         <a href="/home" class="logo-link">
@@ -19,25 +20,42 @@
       </div>
       <nav class="sidebar-nav">
         <a href="/home" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 10L12 3l8 7v9a2 2 0 01-2 2h-4v-5a1 1 0 00-1-1h-2a1 1 0 00-1 1v5H6a2 2 0 01-2-2z"/>
+          </svg>
           <span>Home</span>
         </a>
         <a href="/studio" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="3" width="7" height="7" rx="1"/>
+            <rect x="14" y="3" width="7" height="7" rx="1"/>
+            <rect x="3" y="14" width="7" height="7" rx="1"/>
+            <path d="M17.5 14v7M14 17.5h7"/>
+          </svg>
           <span>Studio</span>
         </a>
         <a href="/profile" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 10-16 0"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="8" r="4"/>
+            <path d="M5 21a7 7 0 0114 0"/>
+          </svg>
           <span>Profile</span>
         </a>
         <a href="/avatar" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2a4 4 0 014 4v2a4 4 0 11-8 0V6a4 4 0 014-4z"/><rect x="6" y="12" width="12" height="10" rx="2"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M9 3h6l2 3h3a1 1 0 011 1v11a2 2 0 01-2 2H5a2 2 0 01-2-2V7a1 1 0 011-1h3l2-3z"/>
+            <circle cx="12" cy="13" r="4"/>
+          </svg>
           <span>Avatar</span>
         </a>
         <a href="/market" class="nav-item active">
-  <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 01-8 0"/></svg>
-  <span>Market</span>
-</a>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 7l1-3h14l1 3"/>
+            <path d="M4 7v13a1 1 0 001 1h14a1 1 0 001-1V7"/>
+            <path d="M9 7v3a3 3 0 006 0V7"/>
+          </svg>
+          <span>Market</span>
+        </a>
       </nav>
       <div class="sidebar-currency">
         <div class="currency-item">
