--- a/public/pages/studio.html
+++ b/public/pages/studio.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tublox Studio</title>
-  <link rel="stylesheet" href="/css/home.css">
   <link rel="stylesheet" href="/css/studio.css">
+  <link rel="stylesheet" href="/css/shared.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="app">
+<div id="app">
     <aside id="sidebar">
       <div class="sidebar-top">
         <a href="/home" class="logo-link">
@@ -19,32 +19,49 @@
       </div>
       <nav class="sidebar-nav">
         <a href="/home" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 10L12 3l8 7v9a2 2 0 01-2 2h-4v-5a1 1 0 00-1-1h-2a1 1 0 00-1 1v5H6a2 2 0 01-2-2z"/>
+          </svg>
           <span>Home</span>
         </a>
         <a href="/studio" class="nav-item active">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="3" width="7" height="7" rx="1"/>
+            <rect x="14" y="3" width="7" height="7" rx="1"/>
+            <rect x="3" y="14" width="7" height="7" rx="1"/>
+            <path d="M17.5 14v7M14 17.5h7"/>
+          </svg>
           <span>Studio</span>
         </a>
         <a href="/profile" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 10-16 0"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="8" r="4"/>
+            <path d="M5 21a7 7 0 0114 0"/>
+          </svg>
           <span>Profile</span>
         </a>
         <a href="/avatar" class="nav-item">
-          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2a4 4 0 014 4v2a4 4 0 11-8 0V6a4 4 0 014-4z"/><rect x="6" y="12" width="12" height="10" rx="2"/></svg>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M9 3h6l2 3h3a1 1 0 011 1v11a2 2 0 01-2 2H5a2 2 0 01-2-2V7a1 1 0 011-1h3l2-3z"/>
+            <circle cx="12" cy="13" r="4"/>
+          </svg>
           <span>Avatar</span>
         </a>
         <a href="/market" class="nav-item">
-  <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 01-8 0"/></svg>
-  <span>Market</span>
-</a>
+          <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 7l1-3h14l1 3"/>
+            <path d="M4 7v13a1 1 0 001 1h14a1 1 0 001-1V7"/>
+            <path d="M9 7v3a3 3 0 006 0V7"/>
+          </svg>
+          <span>Market</span>
+        </a>
       </nav>
       <div class="sidebar-currency">
         <div class="currency-item">
           <img src="/img/urus.png" alt="Urus" class="currency-icon">
           <span class="currency-amount" id="sidebar-urus">0</span>
         </div>
-        <div class="currency-item currency-strikes">
+        <div class="currency-item">
           <img src="/img/daily.png" alt="Strikes" class="currency-icon">
           <span class="currency-amount" id="sidebar-strikes">0</span>
         </div>
@@ -60,61 +77,92 @@
         <button id="btn-logout" class="btn-logout">Logout</button>
       </div>
     </aside>
-
+    
     <main id="main">
-      <!-- HEADER -->
-      <div class="studio-menu-header">
-        <div class="studio-menu-left">
-          <h1>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" style="vertical-align:middle;margin-right:8px">
-              <path d="M12 5v14M5 12h14"/><rect x="3" y="3" width="18" height="18" rx="2"/>
-            </svg>
-            Tublox Studio
-          </h1>
-          <p>Create and publish your own TuGames</p>
+      <!-- Hero -->
+      <div class="studio-hero">
+        <div class="studio-hero-bg"></div>
+        <div class="studio-hero-content">
+          <div class="studio-hero-left">
+            <div class="studio-hero-badge">STUDIO</div>
+            <h1 class="studio-hero-title">Your Games</h1>
+            <p class="studio-hero-desc">Create, edit and publish TuGames for everyone to play</p>
+          </div>
+          <div class="studio-hero-right">
+            <button class="btn-create" id="btn-create-game">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
+              New TuGame
+            </button>
+            <div class="studio-hero-stat">
+              <span class="stat-num" id="game-count">0</span>
+              <span class="stat-label">/ 20 slots</span>
+            </div>
+          </div>
         </div>
-        <button class="btn btn-white btn-create-game" id="btn-create-game">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" style="vertical-align:middle;margin-right:6px">
-            <line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/>
-          </svg>
-          Create TuGame
+      </div>
+
+      <!-- Filters -->
+      <div class="studio-filters">
+        <div class="filter-tabs">
+          <button class="filter-tab active" data-filter="all">All</button>
+          <button class="filter-tab" data-filter="public">Public</button>
+          <button class="filter-tab" data-filter="private">Private</button>
+        </div>
+        <div class="filter-sort">
+          <select id="sort-select" class="sort-select">
+            <option value="updated">Last Updated</option>
+            <option value="created">Date Created</option>
+            <option value="name">Name</option>
+            <option value="plays">Most Played</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Loading -->
+      <div id="studio-loading" class="studio-loading">
+        <div class="spinner"></div>
+        <span>Loading your games...</span>
+      </div>
+
+      <!-- Empty -->
+      <div id="studio-empty" class="studio-empty" style="display:none">
+        <div class="empty-illustration">
+          <div class="empty-box">
+            <svg width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="1.2">
+              <rect x="3" y="3" width="18" height="18" rx="3"/>
+              <line x1="12" y1="8" x2="12" y2="16"/>
+              <line x1="8" y1="12" x2="16" y2="12"/>
+            </svg>
+          </div>
+          <div class="empty-glow"></div>
+        </div>
+        <h3>No games yet</h3>
+        <p>Start building your first TuGame right now</p>
+        <button class="btn-create btn-create-sm" id="btn-create-empty">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
+          Create First Game
         </button>
       </div>
 
-      <!-- GAMES LIST -->
-      <section class="section">
-        <div class="section-header">
-          <h2>My TuGames</h2>
-          <span class="game-count" id="game-count">0 / 20</span>
-        </div>
+      <!-- Games Grid -->
+      <div id="studio-games-grid" class="games-grid" style="display:none"></div>
 
-        <div id="studio-loading" class="studio-loading">
-          <div class="games-loading-spinner"></div>
-          <span>Loading your games...</span>
-        </div>
-
-        <div id="studio-empty" class="studio-empty" style="display:none">
-          <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#333" stroke-width="1.5">
-            <rect x="3" y="3" width="18" height="18" rx="2"/>
-            <line x1="12" y1="8" x2="12" y2="16"/>
-            <line x1="8" y1="12" x2="16" y2="12"/>
-          </svg>
-          <h3>No games yet</h3>
-          <p>Create your first TuGame!</p>
-          <button class="btn btn-white" id="btn-create-empty">Create TuGame</button>
-        </div>
-
-        <div id="studio-games-grid" class="studio-games-grid" style="display:none"></div>
-      </section>
-
-      <!-- DELETE CONFIRM MODAL -->
+      <!-- Delete Modal -->
       <div id="delete-modal" class="modal-overlay" style="display:none">
-        <div class="modal-panel">
-          <h3>Delete Game?</h3>
-          <p>This action cannot be undone. The game will be removed from Tublox.</p>
-          <div class="modal-buttons">
-            <button class="btn btn-outline-light" id="btn-delete-cancel">Cancel</button>
-            <button class="btn btn-danger" id="btn-delete-confirm">Delete</button>
+        <div class="modal-box">
+          <div class="modal-icon">
+            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#ef4444" stroke-width="2">
+              <polyline points="3 6 5 6 21 6"/>
+              <path d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"/>
+              <line x1="10" y1="11" x2="10" y2="17"/>
+              <line x1="14" y1="11" x2="14" y2="17"/>
+            </svg>
+          </div>
+          <h3>Delete this game?</h3>
+          <p>This action is permanent. All data for this game will be lost.</p>
+          <div class="modal-actions">
+            <button class="modal-btn modal-btn-cancel" id="btn-delete-cancel">Cancel</button>
+            <button class="modal-btn modal-btn-delete" id="btn-delete-confirm">Delete Game</button>
           </div>
         </div>
       </div>
