--- a/public/pages/avatar.html
+++ b/public/pages/avatar.html
@@ -6,6 +6,8 @@
   <title>Tublox - Avatar</title>
   <link rel="stylesheet" href="/css/avatar.css">
   <link rel="stylesheet" href="/css/shared.css">
+  <link rel="icon" type="image/png" href="/img/logo.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
