--- a/public/pages/market.html
+++ b/public/pages/market.html
@@ -6,6 +6,8 @@
   <title>Tublox - Market</title>
   <link rel="stylesheet" href="/css/market.css">
   <link rel="stylesheet" href="/css/shared.css">
+  <link rel="icon" type="image/png" href="/img/logo.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
