--- a/public/pages/studio-editor.html
+++ b/public/pages/studio-editor.html
@@ -6,6 +6,7 @@
   <title>Tublox Studio Editor</title>
   <link rel="stylesheet" href="/css/studio-editor.css">
   <link rel="stylesheet" href="/css/shared.css">
+  <link rel="icon" type="image/png" href="/img/studio.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
