--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tublox - Home</title>
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="icon" type="image/png" href="/img/logo.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
