--- a/public/pages/market-item.html
+++ b/public/pages/market-item.html
@@ -6,6 +6,7 @@
   <title>Tublox - Item Details</title>
   <link rel="stylesheet" href="/css/market-item.css">
   <link rel="stylesheet" href="/css/shared.css">
+  <link rel="icon" type="image/png" href="/img/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
@@ -86,7 +87,7 @@
         <button id="btn-logout" class="btn-logout">Logout</button>
       </div>
     </aside>
-    
+
     <!-- MAIN CONTENT -->
     <main id="main">
       <!-- Loading State -->
