--- a/public/pages/game-details.html
+++ b/public/pages/game-details.html
@@ -18,14 +18,6 @@
           <span class="logo">TUBLOX</span>
         </a>
       </div>
-        <div id="app">
-    <aside id="sidebar">
-      <div class="sidebar-top">
-        <a href="/home" class="logo-link">
-          <img src="/img/logo.png" alt="Tublox" class="sidebar-logo-img">
-          <span class="logo">TUBLOX</span>
-        </a>
-      </div>
       <nav class="sidebar-nav">
         <a href="/home" class="nav-item">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -33,7 +25,7 @@
           </svg>
           <span>Home</span>
         </a>
-        <a href="/studio" class="nav-item active">
+        <a href="/studio" class="nav-item">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <rect x="3" y="3" width="7" height="7" rx="1"/>
             <rect x="14" y="3" width="7" height="7" rx="1"/>
